feat : v2 코드 리펙토링